<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_SpindleControl" Id="{1bb10be6-da5c-4278-b3d4-79d7aed2f915}">
    <Declaration><![CDATA[TYPE ST_SpindleControl :
STRUCT
    
// Invertek Optidrive E3 Modbus Register Mapping Control
    
bRunEnable              : BOOL;
bFastStopReq            : BOOL;
bResetReq               : BOOL;
bCoastStopRequest       : BOOL;
i_nSpindleRPMFromNC   	AT %I*  : UINT;  //Spindle Speed setpoint from NC
nRampControlTime		: UINT :=700; //Modbus RTU Register 4
q_fSpindleOverrideSpeed AT %Q*  : UDINT;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>